Implement password change route
